--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/Banner/Banner.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/Banner/Banner.cshtml
@@ -57,7 +57,7 @@
                     <h2 class="mt-3">橫幅管理</h2>
                 </div>
                 <div class="col-6 text-end mt-3">
-            <button class="btn btn-success create_btn" data-bs-toggle="modal" href="#addBannerModalToggle"
+            <button class="create_btn" data-bs-toggle="modal" href="#addBannerModalToggle"
                             role="button">
                 新增橫幅
                     </button>
@@ -66,7 +66,7 @@
 
     <div class="row mt-3">
         <div class="col-6 offset-6 text-end">
-            <button type="button" class="btn btn-success" onclick="showPreviewAlert()">
+            <button type="button" class="create_btn" onclick="showPreviewAlert()">
                 預覽首頁
             </button>
         </div>
@@ -170,7 +170,7 @@
                         <div class="modal-dialog modal-dialog-centered">
                             <div class="modal-content">
                                 <div class="modal-header">
-                                    <h5 class="modal-title" id="EditBannerModalToggleLabel">編輯Banner</h5>
+                                    <h5 class="modal-title" id="EditBannerModalToggleLabel">編輯橫幅</h5>
                                     <button type="button" class="btn-close" data-bs-dismiss="modal"
                                             aria-label="Close"></button>
                                 </div>
@@ -620,8 +620,8 @@
 
         //新增Demo按鍵
         function setCreateBannerValue() {
-            $("#create-name").val("測試用橫幅");
-            $("#create-date").val("2023-09-05");
+            $("#create-name").val("開服限定召喚橫幅");
+            $("#create-date").val("2023-09-01");
             $('#create-display').val("true");
         }
 
