修正了一些東西

--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/Order/Order.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/Order/Order.cshtml
@@ -427,7 +427,7 @@
                 "paging": true, //分頁功能
                 responsive: true, //RWD
                 // "searching": false, //隱藏搜尋框
-                "order": [[0, 'desc']]  // 在這裡指定初始排序的列和順序，0 表示第一列（memberId），'desc' 表示降序
+                //"order": [[0, 'desc']]  // 在這裡指定初始排序的列和順序，0 表示第一列（memberId），'desc' 表示降序
             });
 
             // 綁定select元素的change事件，當選擇條件改變時，重新過濾表格資料
