--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Membership/Membership.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Membership/Membership.cshtml
@@ -226,9 +226,6 @@
                                                                     <input type="text" placeholder="請填入門市地址" id="storeaddress" name="storeaddress" class="form-control" value="@ViewBag.storeaddress" />
                                                                 </div>
                                                                 <button class="btn  btn-warning btn-sm fs-5" type="button" id="SelectShop">+</button>
-
-                                                                @* <button class="btn btn-warning  btn-sm fs-5 mx-1" type="button" id="SelectShop">+</button> *@
-                                                                @* <button class="btn btn-warning  btn-sm fs-5" type="button" id="SelectShopByGooglemap" data-bs-toggle="modal" data-bs-target="#SelectShopModal">+</button> *@
                                                             </div>
                                                             <button type="button" class="btn-sm add-address "
                                                                     data-bs-toggle="modal"
@@ -237,7 +234,7 @@
                                                             </button>
                                                             <button type="button" class="btn-sm add-address " id="addNewMarket">新增超商門市</button>
                                                             <button type="button" class="btn-sm add-address " id="addNewMarketDemo">Demo填入超商</button>
-                                                            <button type="button" class="btn-sm add-address " id="SelectOtherShop">測試</button>
+                                                            @* <button type="button" class="btn-sm add-address " id="SelectOtherShop">測試</button> *@
                                                         </div>
                                                     </div>
                                                     <button class="btn-customs btn hvr-hovers" id="memberInfoButton" type="submit">送出</button>
@@ -536,7 +533,6 @@
                                                 <th scope="col">訂單編號</th>
                                                 <th scope="col">訂單成立日期</th>
                                                 <th scope="col">收件人</th>
-                                                <th scope="col">收件地址</th>
                                                 <th scope="col">收件電話</th>
                                                 <th scope="col">付款方式</th>
                                                 <th scope="col">訂單狀態</th>
@@ -810,6 +806,7 @@
         <!--4.收藏紀錄的內容-->
         <div class="tab-pane fade" id="collect" role="tabpanel" aria-labelledby="collect-tab">
             <section class="my-5">
+                <!--
                 <div class="btn-group d-flex" role="group" aria-label="Button group with nested dropdown">
                     <button id="btnGroupDrop1" type="button" class="btn btn-secondary" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         <a class="btn-white" href="#btnGroupDrop1"><i class="bi bi-share ic-t"></i>分享</a>
@@ -826,7 +823,7 @@
                         <button onclick="downloadPDF()">下載表格為 PDF</button>
                     </div>
                 </div>
-
+                -->
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-12 order-3 order-sm-3 order-md-3 order-xs-3">
@@ -975,8 +972,11 @@
                                 </div>
                                 <div class="submit-button text-center">
                                     <button class="btn hvr-hover" id="complaintSubmit" type="submit">送出訊息</button>
-                                    <button class="btn hvr-hover mx-2" id="badComplaintSubmitDemo" type="button">Demo訊息1</button>
-                                    <button class="btn hvr-hover mx-2" id="complaintSubmitDemo" type="button">Demo訊息2</button>
+                                    <button class="btn hvr-hover mx-2" id="foodDemo" type="button">食品安全</button>
+                                    <button class="btn hvr-hover mx-2" id="gameDemo" type="button">遊戲道具</button>
+                                    <button class="btn hvr-hover mx-2" id="addressDemo" type="button">收件地址</button>
+                                    <button class="btn hvr-hover mx-2" id="emailDemo" type="button">更改信箱</button>
+                                    <button class="btn hvr-hover mx-2" id="newsletterDemo" type="button">訂電子報</button>
                                     <div id="msgSubmit" class="h3 text-center hidden"></div>
                                     <div class="clearfix"></div>
                                 </div>
@@ -1782,7 +1782,6 @@
                             row.insertCell().textContent = formattedDate;
 
                             row.insertCell().textContent = item.recipientName ? item.recipientName : '徐雅莉';
-                            row.insertCell().textContent = item.recipientAddress ? item.recipientAddress : '台北市大安區信義路三段184號';
                             row.insertCell().textContent = item.recipientPhone ? item.recipientPhone : '0912345678';
                             row.insertCell().textContent = item.paymentMethodName ? item.paymentMethodName : '信用卡';
                             row.insertCell().textContent = item.statusName ? item.statusName : '已確認';
@@ -2317,33 +2316,7 @@
 
                         
                         row.insertCell().textContent = item.productName;
-
-                        // row.insertCell().textContent = item.remainingQuantity;
-                        // 假設 remainingQuantity 是一個數字
-                        var remainingQuantity = item.remainingQuantity;
-                        // 將 remainingQuantity 取個位數並加一
-                        var lastDigit = remainingQuantity % 10;
-                        var randomNumber = lastDigit + 1;
-                        // 將增加後的值設定回 item.remainingQuantity
-
-                        if (randomNumber > 7) {
-                            row.insertCell().textContent = randomNumber;
-                        } else if (randomNumber > 4) {
-                            var cell = row.insertCell();
-                            var span = document.createElement("span");
-                            span.textContent = randomNumber;
-                            span.style.color = "#EA7500";
-                            cell.appendChild(span);
-                        } else {
-                            var cell = row.insertCell();
-                            var span = document.createElement("span");
-                            span.textContent = randomNumber;
-                            span.style.color = "red";
-                            span.style.fontWeight = "bold";
-                            cell.appendChild(span);
-                        }
-
-
+                        row.insertCell().textContent = item.remainingQuantity;
                         row.insertCell().textContent = 'NT$ ' + item.productPrice + " / 份";
 
                         var cartCell = row.insertCell();
@@ -2528,19 +2501,6 @@
                 });
             });
 
-            
-            //Demo鍵:載入客訴訊息
-            $('#badComplaintSubmitDemo').click(function (event) {
-                $('#ComplaintTitle').val("商品送錯包裝破損");
-                $('#ComplaintContent').val("為何我於9/1收到的包裹內容物，含有訂單上沒有的商品項目，而且運送過程中疑似發生嚴重碰撞? shit!!");
-            });
-
-            //Demo鍵:載入客訴訊息
-            $('#complaintSubmitDemo').click(function (event) {
-                $('#ComplaintTitle').val("訂單運送急件處理");
-                $('#ComplaintContent').val("請問我的訂單於8/28成立後付款，能於3日內收到貨嗎?貴公司是否能用急件處理，讓我能在月底收到商品呢?");
-            });
-
             //送出客訴內容
             $('#complaintSubmit').click(function (event) {
                 var selectedValue = $('#appealCategorySelect').val();
@@ -2712,6 +2672,36 @@
                      }
                      */
                 }
+            });
+
+            //Demo鍵:載入食安問題-->商品問題
+            $('#foodDemo').click(function (event) {
+                $('#ComplaintTitle').val("產品很有問題");
+                $('#ComplaintContent').val("貓咪在食用產品後，遇到了以下身體不適症狀：腹痛、噁心、嘔吐shit!!");
+            });
+
+            //Demo鍵:載入遊戲道具-->遊戲檢舉
+            $('#gameDemo').click(function (event) {
+                $('#ComplaintTitle').val("遊戲道具無法使用");
+                $('#ComplaintContent').val("請問我的訂單於8/28成立後付款，能於3日內收到貨嗎?貴公司是否能用急件處理，讓我能在月底收到商品呢?");
+            });
+
+            //Demo鍵:載入變更地址-->會員權益
+            $('#addressDemo').click(function (event) {
+                $('#ComplaintTitle').val("請幫我修改住家地址");
+                $('#ComplaintContent').val("因工作搬到新的住處，網站上的個人住址需要修改，新的住址為台中市西屯區臺灣大道三段99號。");
+            });
+
+            //Demo鍵:載入變更信箱-->會員權益
+            $('#emailDemo').click(function (event) {
+                $('#ComplaintTitle').val("請幫我修改電子信箱");
+                $('#ComplaintContent').val("原電子信箱容納空間已滿，新信箱為abcd1234@gmail.com，請幫我做更新");
+            });
+
+            //Demo鍵:載入訂閱電子報-->其他事項
+            $('#newsletterDemo').click(function (event) {
+                $('#ComplaintTitle').val("想訂閱電子報，來了解最新活動");
+                $('#ComplaintContent').val("最近才發現網站有寄送電子報的服務，因為註冊沒有申請，想請客服人員改成寄送每期電子報到信箱");
             });
         });
 
