--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/News/news.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/News/news.cshtml
@@ -53,7 +53,7 @@
             <h2 class="mt-3">公告管理</h2>
         </div>
         <div class="col-6 text-end mt-3">
-            <button class="create_btn" data-bs-toggle="modal" href="#addNewsModalToggle" role="button">
+            <button class="create_btn" id="creates_btn" data-bs-toggle="modal" href="#addNewsModalToggle" role="button">
                 新增公告
             </button>
         </div>
@@ -62,10 +62,10 @@
     <!---新增公告 modal-->
     <div class="modal fade" id="addNewsModalToggle" aria-hidden="true"
          aria-labelledby="exampleModalToggleLabel" tabindex="-1">
-        <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-dialog modal-lg modal-dialog-centered">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalToggleLabel">新增公告</h5>
+                    <h5 class="modal-title" id="exampleModalToggleLabel">新增公告</h5> <button id="Demo-btn">Demo</button>
                     <button type="button" class="btn-close" data-bs-dismiss="modal"
                             aria-label="Close"></button>
                 </div>
@@ -160,7 +160,7 @@
 <!--編輯彈出視窗-->
 <div class="modal fade" id="exampleModal" aria-hidden="true"
      aria-labelledby="exampleModalLabel" tabindex="-1">
-    <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-dialog  modal-lg modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="exampleModalToggleLabel">編輯</h5>
@@ -236,6 +236,7 @@
     <script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote-lite.min.js"></script>
     <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
     <script src="https://cdn.datatables.net/1.13.6/js/dataTables.bootstrap5.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script>
         // 當頁面載入完成後執行
         document.addEventListener("DOMContentLoaded", function () {
@@ -296,28 +297,24 @@
                         var deleteUrl = '@Url.Action("Delete", "News", new { area = "AdminCMS", id = "announcementId" })';
                         deleteUrl = deleteUrl.replace('announcementId', row.announcementId);
                         return `<button class="edit-button" data-id="${row.announcementId}" data-bs-toggle="modal" data-bs-target="#exampleModal"><i class="fas fa-edit"></i></button> |
-                                        <a href="${deleteUrl}" onclick="return confirm('確定要刪除嗎?')"><i class="fas fa-trash-alt"></i></a>`;
+                                                                        <a href="#" onclick="userDelete('${deleteUrl}')"><i class="fas fa-trash-alt"></i></a>`;
                     }
                 }
             ]
         });
 
 
-        function userDelete() {
+        function userDelete(deleteUrl) {
             Swal.fire({
                 title: '確定要刪除嗎?',
                 icon: 'warning',
                 showCancelButton: true,
-                confirmButtonColor: '#3085d6',
+                confirmButtonColor: '#FF0000',
                 cancelButtonColor: '#d33',
-                confirmButtonText: 'Yes, delete it!'
+                confirmButtonText: '確認刪除'
             }).then((result) => {
                 if (result.isConfirmed) {
-                    Swal.fire(
-                        'Deleted!',
-                        'Your file has been deleted.',
-                        'success'
-                    )
+                    window.location.href = deleteUrl;  // 導航到特定網址
                 }
             })
         }
@@ -336,7 +333,7 @@
                         $('#PublishEndTime-editor').val(response.data.publishEndTime)
                         $('#PinToTop-editor').prop('checked', response.data.pinToTop)
                         $('#previewImage').attr('src', response.data.announcementImageHeader);
-                        $('#hide-editor').prop('checked',response.data.displayOrNot)
+                        $('#hide-editor').prop('checked', response.data.displayOrNot)
                         console.log(response.data)
                     } else {
                         alert(response.message);
@@ -356,7 +353,7 @@
 
                 reader.readAsDataURL(file);
             } else {
-                Swal.fire('警告', '請選擇圖片','info')
+                Swal.fire('警告', '請選擇圖片', 'info')
             }
         });
         $("#AnnouncementImageHeader").on('change', function () {
@@ -372,14 +369,14 @@
                     img.attr("src", e.target.result);
                 };
 
-                reader.readAsDataURL(file); 
+                reader.readAsDataURL(file);
                 preview.append(img);
             } else {
                 Swal.fire('警告', '請選擇圖片', 'info')
             }
         });
 
-        
+
 
         $(document).ready(function () {
 
@@ -434,7 +431,7 @@
                 formData.append("PublishTime", PublishTime);
                 formData.append("PublishEndTime", PublishEndTime);
                 formData.append("PinToTop", PinToTop);
-                formData.append("AnnouncementTypeId", Type);
+                formData.append("AnnouncementTypeId", 1);
                 formData.append("ImageHeader", file);
 
                 $.ajax({
@@ -447,7 +444,10 @@
                         swal.fire("成功", "", "success");
                         $('#GProduct-table').DataTable().ajax.reload();
                     }, error: function (jqXHR, textStatus, errorThrown) {
-                        console.error("AJAX error: ", textStatus, errorThrown);
+                        if (jqXHR.status === 400) { // 400 是 HTTP BadRequest
+                            var message = jqXHR.responseText || "已有置頂公告"; // 試圖讀取返回的訊息，或使用預設訊息
+                            swal.fire("失敗", message, "error");
+                        }
                     }
                 });
             });
@@ -510,6 +510,22 @@
             document.querySelector("#PublishEndTime-editor").min = dateTime;
         });
 
+        let now = new Date();
+        let year = now.getFullYear();
+        let month = String(now.getMonth() + 1).padStart(2, '0'); // months are 0-based
+        let day = String(now.getDate()).padStart(2, '0');
+        let hours = String(now.getHours()).padStart(2, '0');
+        let minutes = String(now.getMinutes()).padStart(2, '0');
+
+        $(document).on('click', '#Demo-btn', function () {
+            const newsTitle = $('#newsTitle').val('食品下架公告')
+            const announcementTypeSelect = $('#announcementTypeSelect').val('1')
+            let dateTimeString = `${year}-${month}-${day}T${hours}:${minutes}`;
+            const PublishTime = $('#PublishTime').val(dateTimeString);
+            const PublishEndTime = $('#PublishEndTime').val('2023-09-16T13:00')
+            const PinToTop = $('#PinToTop').prop('checked', true);
+            const summernote = $('#summernote').summernote('code', '<img src="https://images.seattletimes.com/wp-content/uploads/2018/07/web-sorry-work-ThinkstockPhotos-500489798.jpg?d=1020x817" /> <br> <p>非常抱歉</p>');
+        })
     </script>
 }
 
